Fixed session spacing

--- a/client/styles/index.scss
+++ b/client/styles/index.scss
@@ -299,8 +299,7 @@ html {
     color: white;
   }
   #key,
-  .options,
-  #mp {
+  .options {
     display: flex;
     flex-wrap: wrap;
     gap: 6px;
